Fixed layout again

--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -6,4 +6,6 @@ version = 0.0.1
 zip_safe = False
 include_package_data = False
 packages = find:
+# package_dir =
+#     =pi_car_robot_api_tools
 install_requires = pika
