--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -5,7 +5,7 @@ version = 0.0.1
 [options]
 zip_safe = False
 include_package_data = False
-packages = find:
+packages = find_namespace:
 # package_dir =
 #     =pi_car_robot_api_tools
 install_requires = pika
